<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee"
    tools:context=".LoginActivity">

    <include layout="@layout/base_activity_title"/>


<TextView
    android:id="@+id/tv_app_name"
    android:background="@drawable/login_appname_background"
    android:layout_width="match_parent"
    android:layout_height="150dp"
   android:gravity="center_vertical"
    />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="#ffffff"
        >

    <EditText
        android:id="@+id/et_user_id"
        android:hint="@string/userid_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_userid_identity_black_18dp"
        android:background="@null"
        android:inputType="number"
        android:maxLength="6"

        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password_outline_black_18dp"
        android:background="@null"
        android:inputType="number"
        android:password="true"
        android:maxLength="6"

        />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#4169E1"
        />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>