<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowHistoryActivity">
<include layout="@layout/base_activity_title"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linear_layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/tv_history_date"
            android:text="@string/history_textView_riqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />

        <EditText
            android:id="@+id/et_history_date"
            android:inputType="datetime"
            android:maxLength="10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"

            />

        <TextView
            android:id="@+id/tv_history_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_access_alarm_black_18dp"
            />




    </LinearLayout>


        <Button
            android:id="@+id/btn_history_add"
            android:text="@string/history_button_xinzeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/show_button_background"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            />
    </RelativeLayout>


</LinearLayout>



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_history_empty_message"
        android:text="@string/history_empty_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"

        />

</RelativeLayout>

</LinearLayout>