<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrintActivity">

<include layout="@layout/base_activity_title"/>

    <!--工号-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_print_workId"
            android:text="@string/print_textview_workID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />

        <EditText
            android:id="@+id/et_print_workId"
            android:inputType="number"
            android:maxLength="6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"

            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/tv_print_workName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />


    </LinearLayout>





</LinearLayout>



    <!--日期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <TextView
            android:text="@string/print_textview_starSign"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_print_date"
            android:text="@string/print_textview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />

        <EditText
            android:id="@+id/et_print_date"
            android:inputType="datetime"
            android:maxLength="10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:enabled="false"

            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            />

    </LinearLayout>

    <!--任务码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <TextView
                android:text="@string/print_textview_starSign"
                android:textColor="@color/colorRed"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_print_taskCode"
                android:text="@string/print_textview_taskCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                />


            <Spinner
                android:id="@+id/spinner_print_taskCode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/tasklist"
                />







        </LinearLayout>
        <!--      <TextView
                  android:text="@string/print_textview_starSign"
                  android:textColor="@color/colorRed"
                  android:gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:id="@+id/tv_print_taskCode"
                  android:text="@string/print_textview_taskCode"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  />


              <Spinner
                  android:id="@+id/spinner_print_taskCode"
                  android:layout_width="120dp"
                  android:layout_height="wrap_content"
                  android:entries="@array/tasklist"
                  />-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_print_taskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"

                />

        </LinearLayout>
        <!--     <TextView
                 android:id="@+id/tv_print_taskDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"

                 />-->
    </LinearLayout>

    <!--订单号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <TextView
        android:text="@string/print_textview_starSign"
        android:textColor="@color/colorRed"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_print_order_number"
        android:text="@string/print_textview_orderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        />

    <EditText
        android:id="@+id/et_print_order_number"
        android:inputType="number"
        android:maxLength="7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:enabled="true"

        />






</LinearLayout>

     <!--   <TextView
            android:text="@string/print_textview_starSign"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_print_order_number"
            android:text="@string/print_textview_orderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />

        <EditText
            android:id="@+id/et_print_order_number"
            android:inputType="number"
            android:maxLength="10"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:enabled="true"

            />
-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <TextView
                android:id="@+id/tv_print_material_dsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="物料详情"

                />

        </LinearLayout>
      <!--  <TextView
            android:id="@+id/tv_print_material_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            />-->
    </LinearLayout>




    <!--小时-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <TextView
            android:text="@string/print_textview_starSign"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_print_hour"
            android:text="@string/print_textview_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />



        <Spinner
            android:id="@+id/spinner_print_hour"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/hourlist"
            />


    </LinearLayout>
    <!--分钟-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        >

        <TextView
            android:text="@string/print_textview_starSign"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_print_minute"
            android:text="@string/print_textview_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            />



        <Spinner
            android:id="@+id/spinner_print_minute"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/minutelist"
            />

    </LinearLayout>
    <!--保存-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_print_save"
            android:text="@string/print_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/show_button_background"
            />

    </LinearLayout>


</LinearLayout>