<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:id="@+id/linearOutest_item_history"

    >
<!--日期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_history_item_recyclerview_date"
            android:text="日    期:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_history_item_recyclerview_date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>



    <!--任务码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_history_item_recyclerview_task_code"
                android:text="@string/history_item_recyclerview_task_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_history_item_recyclerview_task_code_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp">



            <TextView
                android:id="@+id/tv_history_item_recyclerview_task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />


        </LinearLayout>

        <!--  <TextView
              android:id="@+id/tv_history_item_recyclerview_task_description"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              />-->


    </LinearLayout>












    <!--订单号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
            android:id="@+id/tv_history_item_recyclerview_order_number"
            android:text="@string/history_item_recyclerview_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_history_item_recyclerview_order_number_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:id="@+id/tv_history_item_recyclerview_material_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                />

        </LinearLayout>
       <!-- <TextView
            android:id="@+id/tv_history_item_recyclerview_material_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            />-->

    </LinearLayout>



    <!--工时小时-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_history_item_recyclerview_work_hours"
            android:text="@string/history_item_recyclerview_work_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_history_item_recyclerview_work_hours_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!--工时分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_history_item_recyclerview_work_minutes"
            android:text="@string/history_item_recyclerview_work_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_history_item_recyclerview_work_minutes_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</LinearLayout>
